[workspace]
members = [
	"add_generics",
	"bingocard",
	"bingocard_vec",
	"bmi",
	"bmi_checker",
	"bmi_struct",
	"caesar_enc1",
	"caesar_enc2",
	"calc_price",
	"check3",
	"check_range",
	"coin",
	"counter",
	"counter_fix",
	"cur_files",
	"dice",
	"dictionary",
	"enc_save_load",
	"era_name",
	"fibonacci",
	"findfile",
	"fizzbuzz",
	"fizzbuzz_file",
	"fizzbuzz_file2",
	"globalvars",
	"gugu",
	"iter_array_string_fix",
	"iter_fib",
	"iter_prime",
	"korean_month",
	"match_bmi",
	"match_fizzbuzz",
	"maze",
	"method_bmi",
	"mod_random",
	"mutarg",
	"mytest",
	"mytest2",
	"mytest_data",
	"mytest_struct",
	"mytree",
	"owner_func_mut",
	"pow1234_5678",
	"prime100",
	"print_args_vec",
	"rand",
	"rand_global",
	"rand_xorshift",
	"read_file",
	"rec_fib",
	"str_find",
	"str_hex",
	"str_index_fix",
	"str_replace",
	"str_split_telno",
	"str_static",
	"str_substr",
	"str_tobytes",
	"str_tochars",
	"struct_copy_fix",
	"struct_method_generics",
	"struct_new",
	"struct_wh",
	"sum_args",
	"sum_textfile",
	"trait_treasurebox",
	"tuple_goods_struct",
	"wallet",
	"rpn_calc",
	"rpn_test",
]