[package]
name = "rpn_calc_joonhoson"
version = "0.0.1"
edition = "2021"
authors = ["JoonHo Son <joonho.son@me.com>"]
description = "RPN(Reverse Polish Notation) library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
